docs: clarify test job naming in CI workflow
Renamed 'Unit Tests' to 'Unit & Integration Tests' to better reflect
that the job runs both unit tests and integration tests together.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,7 @@ jobs:
         run: npx prettier --check "src/**/*.{ts,tsx}"
 
   unit-tests:
-    name: Unit Tests
+    name: Unit & Integration Tests
     needs: setup
     runs-on: ubuntu-latest
     steps:
