--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "test": "vitest run",
+    "test:unit": "vitest run --exclude \"**/*integration*\"",
+    "test:integration": "vitest run src/features/__tests__/dashboard-integration.test.tsx src/features/__tests__/lead-conversion.integration.test.tsx src/features/__tests__/lead-lifecycle.integration.test.tsx",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:coverage:ui": "vitest --coverage --ui",
