fix: restore essential index.html for Vite application
- Restore index.html which is the main entry point for the React app
- Update .gitattributes to only ignore test report HTML files
- Keep main index.html for GitHub Pages deployment and app functionality
- This fixes broken GitHub Pages deployment and application entry point

This reverts the accidental removal of the main application file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 # Override GitHub language detection
-*.html linguist-detectable=false
+# Ignore HTML files from test reports but keep main index.html
+coverage/*.html linguist-detectable=false
+playwright-report/*.html linguist-detectable=false
+test-results/*.html linguist-detectable=false
 *.htm linguist-detectable=false
 *.ts linguist-detectable=true
 *.tsx linguist-detectable=true
