fix: correct GitHub Pages base path in deploy workflow
- Fix base-path for production from '/' to '/seller-console/'
- Ensures consistency between vite.config.ts and deploy workflow
- Resolves 404 errors for assets in GitHub Pages deployment
- Assets will now load correctly from /seller-console/assets/ path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           echo "environment=$ENV" >> $GITHUB_OUTPUT
           
           if [ "$ENV" = "production" ]; then
-            echo "base-path=/" >> $GITHUB_OUTPUT
+            echo "base-path=/seller-console/" >> $GITHUB_OUTPUT
             echo "should-deploy=true" >> $GITHUB_OUTPUT
           elif [ "$ENV" = "staging" ]; then
             echo "base-path=/staging/" >> $GITHUB_OUTPUT
