fix: add cache-busting to force GitHub Pages deployment refresh
- Add timestamp to index.html to force GitHub Pages cache invalidation
- Should resolve corrupted asset filenames (adding '1' to extensions)
- Forces fresh deployment to clear any cached corrupted content
- Helps identify if issue is server-side caching vs deployment process

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,6 +115,10 @@ jobs:
       - name: Add custom 404 page for SPA routing
         run: |
           cp dist/index.html dist/404.html
+          
+      - name: Add cache-busting timestamp
+        run: |
+          echo "<!-- Deploy timestamp: $(date) -->" >> dist/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
